<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_orders_my_orders"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:id="@+id/tabLayoutContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:tabMinWidth="180dp"
                android:textAlignment="center"
                android:background="@color/background"
                >

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_all_orders"
                    android:id="@+id/orders_tabAll"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_pending"
                    android:id="@+id/orders_tabPending"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_processing"
                    android:id="@+id/orders_tabProcessed"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_packaged"
                    android:id="@+id/orders_tabPackaged"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_shipped"
                    android:id="@+id/orders_tabShipped"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_onholde"
                    android:id="@+id/orders_tabOnHold"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_delivered"
                    android:id="@+id/orders_tabDelivered"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_confirmed"
                    android:id="@+id/orders_tabConfirmed"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_refund_requested"
                    android:id="@+id/orders_tabRefundRequested"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_returned"
                    android:id="@+id/orders_tabReturned"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_refunded"
                    android:id="@+id/orders_tabRefunded"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_cancelled"
                    android:id="@+id/orders_tabCancelled"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_orders_rejected"
                    android:id="@+id/orders_tabRejected"/>

            </com.google.android.material.tabs.TabLayout>

        </HorizontalScrollView>
        <LinearLayout
            android:visibility="gone"
            android:gravity="center"
            android:id="@+id/orders_emptyOrdersMsgLayout"
            android:orientation="vertical"
            android:layout_width="150dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabLayoutContainer">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_marginTop="32dp"
                android:scaleType="centerCrop"
                android:id="@+id/animationViewOrdersPage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:lottie_rawRes="@raw/empty" />

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_orders_no_orders"
                android:textColor="@color/textAd"
                android:fontFamily="@font/metropolis_semibold"
                android:textSize="18sp"
                >

            </TextView>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ordersfragment_ordersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/tabLayoutContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/order_item_single" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
