<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="CardAddBottomSheetBinding">

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cardBottomSheet"
        android:background="@drawable/menu_bg">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/add_card_bottom_link_a_new_card"
            android:textColor="@color/mainText"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <EditText
                android:id="@+id/nameEt_cardAddBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/add_card_bottom_card_holder_name"
                android:inputType="textPersonName"
                android:maxLines="1" />

            <EditText
                android:id="@+id/cardNumber_cardAddBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/add_card_bottom_card_number"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/exp_cardAddBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/add_card_bottom_expiry_date"
                android:inputType="date"
                android:maxLines="1" />

            <EditText
                android:id="@+id/cvv_cardAddBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="15sp"
                android:paddingLeft="20dp"
                android:drawableEnd="@null"
                android:paddingRight="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/mainText"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/add_card_bottom_cvv"
                android:inputType="number"
                android:maxLines="1" />

            <Button
                android:id="@+id/addCardBtn_cardAddBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:text="@string/add_card_bottom_add_card"
                android:layout_marginTop="30dp"
                android:elevation="10dp"
                android:layout_marginBottom="40dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>